# cli-assistant

./: .gitignore  ARCHITECTURE.md  MANIFEST.in  README.md  build.bat  build.py  build.sh  example_json_usage.py  install.bat  install.sh  pyproject-mac.toml  pyproject-windows.toml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build-and-release.yml  lint.yml  tests.yml
src/: notes_manager.py  personal_assistant.py
src/address_book/: __init__.py  base_field_classes.py  class_addressBook.py  class_birthday_managment.py  class_record_main.py  models.py
src/cli_assistant/: __init__.py  __main__.py  animated_effects.py  assistant_stub.py  base_field_classes.py  chat_assistant.py  class_addressBook.py  class_birthday_managment.py  class_record_main.py  config_manager.py  enhanced_visual_effects.py  function_definitions.py  function_executor.py  function_executor_new.py  interactive_menu.py  interactive_table.py  main.py  model_manager.py  operations_manager.py  visual_effects.py
src/cli_assistant/Tasks_Denys/: Task_001.txt
src/cli_assistant/database/: __init__.py  contact_models.py  data_manager.py  note_models.py
src/database/: contact_models.py  data_manager.py  note_models.py
tests/: Address_book_test.py  test_assistant_stub.py  test_chat_assistant.py  test_data_manager.py  test_data_manager_basic.py  test_data_manager_contacts.py  test_data_manager_error_handling.py  test_data_manager_file_ops.py  test_data_manager_notes.py  test_main.py  test_models.py  test_notes.py  test_personal_assistant.py  tests_Field_Name_Phone_Birthday.py
